fix(gtk3.20: calendar): fix highlight being unreadable with some theme color combinations

--- a/src/gtk-3.20/scss/widgets/_calendar.scss
+++ b/src/gtk-3.20/scss/widgets/_calendar.scss
@@ -56,7 +56,7 @@
         &.highlight,
         &.highlight:backdrop {
             font-size: smaller;
-            color: $selected_bg_color;
+            color: mix($selected_bg_color, $fg_color, .5);
         }
 
         &:backdrop {
